# des-contracts

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
des_contracts/: __init__.py
des_contracts/analyzer/: __init__.py
des_contracts/kg/: __init__.py
des_contracts/rag/: __init__.py
des_contracts/registry/: __init__.py
des_contracts/schema/: __init__.py  ops.py
des_contracts/tests/: test_analyzer.py  test_kg.py  test_rag.py  test_registry.py  test_schema.py
